force-app/main/default/objects/Incentive__c/fields/CodeIncentive__c.field-meta.xml
<CustomField>
    <fullName>CodeIncentive__c</fullName>
    <externalId>true</externalId>
    <label>Code Incentive</label>
    <length>10</length>
    <type>Text</type>
</CustomField>