force-app/main/default/objects/Incentive__c/fields/DebutValidite__c.field-meta.xml
<CustomField>
    <fullName>DebutValidite__c</fullName>
    <label>Début Validité</label>
    <type>Date</type>
</CustomField>