force-app/main/default/objects/Incentive__c/fields/DVElligibles__c.field-meta.xml
<CustomField>
    <fullName>DVElligibles__c</fullName>
    <label>DV Elligibles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>