force-app/main/default/objects/Incentive__c/fields/LibelleOperation__c.field-meta.xml
<CustomField>
    <fullName>LibelleOperation__c</fullName>
    <label>Libellé Opération</label>
    <length>45</length>
    <type>Text</type>
</CustomField>