force-app/main/default/objects/Incentive__c/fields/Magasinselligibles__c.field-meta.xml
<CustomField>
    <fullName>Magasinselligibles__c</fullName>
    <label>Magasins elligibles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>