force-app/main/default/objects/Incentive__c/fields/OriginesElligibles__c.field-meta.xml
<CustomField>
    <fullName>OriginesElligibles__c</fullName>
    <label>Origines Elligibles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>