force-app/main/default/objects/Incentive__c/fields/TypePromotion__c.field-meta.xml
<CustomField>
    <fullName>TypePromotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type Promotion</label>
    <referenceTo>TypePromotion__c</referenceTo>
    <relationshipLabel>Incentives</relationshipLabel>
    <relationshipName>Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>