force-app/main/default/objects/Incentive__c/listViews/OPE_FOIRES_2014.listView-meta.xml
<ListView>
    <fullName>OPE_FOIRES_2014</fullName>
    <columns>NAME</columns>
    <columns>CodeIncentive__c</columns>
    <columns>LibelleOperation__c</columns>
    <columns>DebutValidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>Magasinselligibles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeIncentive__c</field>
        <operation>contains</operation>
        <value>2015FOIR</value>
    </filters>
    <label>OPE FOIRES 2015</label>
    <language>fr</language>
</ListView>