force-app/main/default/objects/Incentive__c/listViews/OPERATIONS_CLIENTS_2015.listView-meta.xml
<ListView>
    <fullName>OPERATIONS_CLIENTS_2015</fullName>
    <columns>NAME</columns>
    <columns>DebutValidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>Magasinselligibles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>2016OPCL</value>
    </filters>
    <label>OPERATIONS CLIENTS 2015</label>
    <language>fr</language>
</ListView>