force-app/main/default/objects/Incentive__c/listViews/OPERATIONS_CLIENTS_2017.listView-meta.xml
<ListView>
    <fullName>OPERATIONS_CLIENTS_2017</fullName>
    <columns>NAME</columns>
    <columns>DebutValidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>LibelleOperation__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeIncentive__c</field>
        <operation>startsWith</operation>
        <value>2017OPCL</value>
    </filters>
    <label>OPERATIONS CLIENTS 2017</label>
    <language>fr</language>
</ListView>