force-app/main/default/objects/Incentive__c/listViews/OPERATIONS_FOIRES_2020.listView-meta.xml
<ListView>
    <fullName>OPERATIONS_FOIRES_2020</fullName>
    <columns>NAME</columns>
    <columns>DebutValidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>LibelleOperation__c</columns>
    <columns>Actif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeIncentive__c</field>
        <operation>startsWith</operation>
        <value>2020FOIR</value>
    </filters>
    <label>OPERATIONS FOIRES 2020</label>
    <language>fr</language>
</ListView>