force-app/main/default/objects/Incentive__c/listViews/OPERATIONS_VP_2020.listView-meta.xml
<ListView>
    <fullName>OPERATIONS_VP_2020</fullName>
    <columns>NAME</columns>
    <columns>DebutValidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>LibelleOperation__c</columns>
    <columns>Actif__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CodeIncentive__c</field>
        <operation>startsWith</operation>
        <value>2020VPV</value>
    </filters>
    <label>OPERATIONS VENTE PRIVEE 2020</label>
    <language>fr</language>
</ListView>