force-app/main/default/objects/Incentive__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>CodeIncentive__c</columns>
    <columns>DebutValidite__c</columns>
    <columns>FinValidite__c</columns>
    <columns>Magasinselligibles__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>1/12/2021 12:00 AM</value>
    </filters>
    <label>TODAY</label>
    <language>fr</language>
</ListView>